kubernetes/apps/base/observability/kube-prometheus-stack/app/httproute.yaml
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: alert-manager
#   namespace: observability
# spec:
#   parentRefs:
#     - name: envoy-external
#       namespace: network-system
#       sectionName: https
#   hostnames:
#     - 'alert-manager.${CLUSTER_DOMAIN}'
#   rules:
#     - backendRefs:
#         - name: alertmanager-operated
#           port: 9093
#           weight: 100
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: observability
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
  hostnames:
    - 'prometheus.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: kube-prometheus-stack-prometheus
          port: 9090
          weight: 100
